# polymarketbot

./: .env.example  .gitignore  LICENSE  README.md  START-HERE.txt  pyproject.toml  setup.bat
config/: default.yaml
scripts/: run-paper.bat  setup.bat
src/polymarketbot/: __init__.py  __main__.py  cli.py  config.py  models.py  setup_wizard.py
src/polymarketbot/clients/: __init__.py  clob.py  data_api.py  gamma.py  websocket.py
src/polymarketbot/engine/: bot.py  executor.py  portfolio.py  risk.py
src/polymarketbot/notify/: __init__.py  telegram.py
src/polymarketbot/persistence/: __init__.py  store.py
src/polymarketbot/strategies/: base.py  binary_arb.py  registry.py
src/polymarketbot/utils/: logging.py  math.py
